
* SOLR-15575: Propagate request level basic auth creds from the top-level async CollectionAdminRequest to internally
  used async requests, such as async status checking (Timothy Potter)

* SOLR-14758: Fix NPE in QueryComponent.mergeIds when using timeAllowed and sorting
  (Bram Van Dam, Uwe Schindler)

Other Changes
---------------------
* SOLR-15355: Upgrade Hadoop from 3.2.0 to 3.2.2. (Antoine Gruzelle via David Smiley)

* SOLR-15502: Remove MetricsCollectorHandler deprecated warning from the logs. (Bernd Wahlen, ab)

* SOLR-15566: Clarify ref guide documentation about SQL queries with `SELECT *` requiring a `LIMIT` clause (Timothy Potter)

* SOLR-15573: bin/solr auth utility should provide role bindings for `security-read` and `config-edit` by default
  to protect the security and schema designer screens in the Admin UI (Timothy Potter)

* SOLR-15486: During node shutdown pausing of updates and waiting for in-flight update requests to finish
  before closing cores is no longer SolrCloud specific. (Christine Poerschke, David Smiley)

==================  8.9.0 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

New Features
---------------------
* SOLR-14330: ExpandComponent now supports an expand.nullGroup=true option (hossman)

* SOLR-15150: New update.partial.requireInPlace=true option to prevent any partial document updates that can't be done In-Place (hossman)

* SOLR-15087: SolrCloud backups can now be restored to compatible existing collections, instead of requiring a new collection
  for each restore. (Jason Gerlowski, shalin, Cao Manh Dat)

* SOLR-15132: Add temporal graph query to the nodes Streaming Expression (Joel Bernstein)

* SOLR-15365: Improved Grafana dashboard for Prometheus Exporter with new Solr Cluster row (janhoy)

* SOLR-15300: Report collection and shard "health" state in CLUSTERSTATUS response. (ab, janhoy)

* SOLR-15397: Expose zookeeper status in the Prometheus exporter (janhoy)