@@ -22,6 +22,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.plan.RelOptCost;
@@ -31,11 +32,17 @@ import org.apache.calcite.plan.RelTraitSet;
 import org.apache.calcite.rel.RelNode;
 import org.apache.calcite.rel.core.Filter;
 import org.apache.calcite.rel.metadata.RelMetadataQuery;
-import org.apache.calcite.rex.*;
+import org.apache.calcite.rex.RexBuilder;
+import org.apache.calcite.rex.RexCall;
+import org.apache.calcite.rex.RexInputRef;
+import org.apache.calcite.rex.RexLiteral;
+import org.apache.calcite.rex.RexNode;
+import org.apache.calcite.rex.RexUtil;
 import org.apache.calcite.sql.SqlKind;
 import org.apache.calcite.sql.type.SqlTypeName;
 import org.apache.calcite.util.Pair;
 import org.apache.solr.client.solrj.util.ClientUtils;
+import org.apache.solr.common.SolrException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -79,7 +86,7 @@ class SolrFilter extends Filter implements SolrRel {
       Translator translator = new Translator(SolrRules.solrFieldNames(getRowType()), builder);
       String query = translator.translateMatch(condition);
       implementor.addQuery(query);
-      implementor.setNegativeQuery(translator.negativeQuery);
+      implementor.setNegativeQuery(query.startsWith("-"));
     }
   }
 
@@ -87,7 +94,6 @@ class SolrFilter extends Filter implements SolrRel {
 
     protected final List<String> fieldNames;
     private final RexBuilder builder;
-    public boolean negativeQuery = true;
 
     Translator(List<String> fieldNames, RexBuilder builder) {
       this.fieldNames = fieldNames;
@@ -102,42 +108,43 @@ class SolrFilter extends Filter implements SolrRel {
       final SqlKind kind = condition.getKind();
 
       if (condition.isA(SqlKind.SEARCH)) {
-
-        return translateMatch(RexUtil.expandSearch(builder, null, condition));
-      }
-
-      if (kind.belongsTo(SqlKind.COMPARISON) || kind == SqlKind.NOT) {
+        return translateSearch(condition);
+      } else if (kind.belongsTo(SqlKind.COMPARISON) || kind == SqlKind.NOT) {
         return translateComparison(condition);
       } else if (condition.isA(SqlKind.AND)) {
-        // see if this is a translated range query of greater than or equals and less than or equal on same field
-        // if so, then collapse into a single range criteria, e.g. field:[gte TO lte] instead of two ranges AND'd together
-        RexCall call = (RexCall) condition;
-        List<RexNode> operands = call.getOperands();
-        String query = null;
-        if (operands.size() == 2) {
-          RexNode lhs = operands.get(0);
-          RexNode rhs = operands.get(1);
-          if (lhs.getKind() == SqlKind.GREATER_THAN_OR_EQUAL && rhs.getKind() == SqlKind.LESS_THAN_OR_EQUAL) {
-            query = translateBetween(lhs, rhs);
-          } else if (lhs.getKind() == SqlKind.LESS_THAN_OR_EQUAL && rhs.getKind() == SqlKind.GREATER_THAN_OR_EQUAL) {
-            // just swap the nodes
-            query = translateBetween(rhs, lhs);
-          }
-        }
-        query = query != null ? query : "(" + translateAnd(condition) + ")";
-        if (log.isDebugEnabled()) {
-          log.debug("translated query match={}", query);
-        }
-        return query;
+        return translateAndOrBetween(condition);
       } else if (condition.isA(SqlKind.OR)) {
         return "(" + translateOr(condition) + ")";
       } else if (kind == SqlKind.LIKE) {
-        return translateLike(condition, false);
+        return translateLike(condition);
       } else if (kind == SqlKind.IS_NOT_NULL || kind == SqlKind.IS_NULL) {
         return translateIsNullOrIsNotNull(condition);
       } else {
         return null;
       }
+    }
+
+    protected String translateAndOrBetween(RexNode condition) {
+      // see if this is a translated range query of greater than or equals and less than or equal on same field
+      // if so, then collapse into a single range criteria, e.g. field:[gte TO lte] instead of two ranges AND'd together
+      RexCall call = (RexCall) condition;
+      List<RexNode> operands = call.getOperands();
+      String query = null;
+      if (operands.size() == 2) {
+        RexNode lhs = operands.get(0);
+        RexNode rhs = operands.get(1);
+        if (lhs.getKind() == SqlKind.GREATER_THAN_OR_EQUAL && rhs.getKind() == SqlKind.LESS_THAN_OR_EQUAL) {
+          query = translateBetween(lhs, rhs);
+        } else if (lhs.getKind() == SqlKind.LESS_THAN_OR_EQUAL && rhs.getKind() == SqlKind.GREATER_THAN_OR_EQUAL) {
+          // just swap the nodes
+          query = translateBetween(rhs, lhs);
+        }
+      }
+      query = (query != null ? query : translateAnd(condition));
+      if (log.isDebugEnabled()) {
+        log.debug("translated query match={}", query);
+      }
+      return "(" + query + ")";
     }
 
     protected String translateBetween(RexNode gteNode, RexNode lteNode) {
@@ -147,7 +154,6 @@ class SolrFilter extends Filter implements SolrRel {
       String query = null;
       if (fieldName.equals(lte.getKey()) && compareRexLiteral(gte.right, lte.right) < 0) {
         query = fieldName + ":[" + toSolrLiteral(gte.getValue()) + " TO " + toSolrLiteral(lte.getValue()) + "]";
-        this.negativeQuery = false; // so we don't get *:* AND range
       }
 
       return query;
@@ -172,7 +178,6 @@ class SolrFilter extends Filter implements SolrRel {
       if (left instanceof RexInputRef) {
         String name = fieldNames.get(((RexInputRef) left).getIndex());
         SqlKind kind = node.getKind();
-        this.negativeQuery = false;
         return kind == SqlKind.IS_NOT_NULL ? "+" + name + ":*" : "(*:* -" + name + ":*)";
       }
 
@@ -182,7 +187,11 @@ class SolrFilter extends Filter implements SolrRel {
     protected String translateOr(RexNode condition) {
       List<String> ors = new ArrayList<>();
       for (RexNode node : RelOptUtil.disjunctions(condition)) {
-        ors.add(translateMatch(node));
+        String orQuery = translateMatch(node);
+        if (orQuery.startsWith("-")) {
+          orQuery = "(*:* "+orQuery+")";
+        }
+        ors.add(orQuery);
       }
       return String.join(" OR ", ors);
     }
@@ -197,7 +206,11 @@ class SolrFilter extends Filter implements SolrRel {
 
 
       for (RexNode node : ands) {
-        andStrings.add(translateMatch(node));
+        String andQuery = translateMatch(node);
+        if (andQuery.startsWith("-")) {
+          andQuery = "(*:* "+andQuery+")";
+        }
+        andStrings.add(andQuery);
       }
 
       String andString = String.join(" AND ", andStrings);
@@ -213,7 +226,7 @@ class SolrFilter extends Filter implements SolrRel {
       }
     }
 
-    protected String translateLike(RexNode like, boolean isNegativeQuery) {
+    protected String translateLike(RexNode like) {
       Pair<String, RexLiteral> pair = getFieldValuePair(like);
       String terms = pair.getValue().toString().trim();
       terms = terms.replace("'", "").replace('%', '*').replace('_', '?');
@@ -224,7 +237,6 @@ class SolrFilter extends Filter implements SolrRel {
         wrappedQuotes = true;
       }
 
-      this.negativeQuery = isNegativeQuery;
       String query = pair.getKey() + ":" + terms;
       return wrappedQuotes ? "{!complexphrase}" + query : query;
     }
@@ -233,7 +245,7 @@ class SolrFilter extends Filter implements SolrRel {
       final SqlKind kind = node.getKind();
       if (kind == SqlKind.NOT) {
         RexNode negated = ((RexCall) node).getOperands().get(0);
-        return "-" + (negated.getKind() == SqlKind.LIKE ? translateLike(negated, true) : translateComparison(negated));
+        return "-" + (negated.getKind() == SqlKind.LIKE ? translateLike(negated) : translateMatch(negated));
       }
 
       Pair<String, RexLiteral> binaryTranslated = getFieldValuePair(node);
@@ -241,24 +253,19 @@ class SolrFilter extends Filter implements SolrRel {
       RexLiteral value = binaryTranslated.getValue();
       switch (kind) {
         case EQUALS:
-          this.negativeQuery = false;
           return toEqualsClause(key, value, node);
         case NOT_EQUALS:
-          return "-(" + toEqualsClause(key, value, node) + ")";
+          return "-" + toEqualsClause(key, value, node);
         case LESS_THAN:
-          this.negativeQuery = false;
           return "(" + key + ": [ * TO " + toSolrLiteral(value) + " })";
         case LESS_THAN_OR_EQUAL:
-          this.negativeQuery = false;
           return "(" + key + ": [ * TO " + toSolrLiteral(value) + " ])";
         case GREATER_THAN:
-          this.negativeQuery = false;
           return "(" + key + ": { " + toSolrLiteral(value) + " TO * ])";
         case GREATER_THAN_OR_EQUAL:
-          this.negativeQuery = false;
           return "(" + key + ": [ " + toSolrLiteral(value) + " TO * ])";
         case LIKE:
-          return translateLike(node, false);
+          return translateLike(node);
         case IS_NOT_NULL:
         case IS_NULL:
           return translateIsNullOrIsNotNull(node);
@@ -356,12 +363,12 @@ class SolrFilter extends Filter implements SolrRel {
       }
 
       if (left.getKind() == SqlKind.CAST && right.getKind() == SqlKind.CAST) {
-        return translateBinary2(((RexCall)left).operands.get(0), ((RexCall)right).operands.get(0));
+        return translateBinary2(((RexCall) left).operands.get(0), ((RexCall) right).operands.get(0));
       }
 
       // for WHERE clause like: pdatex >= '2021-07-13T15:12:10.037Z'
       if (left.getKind() == SqlKind.INPUT_REF && right.getKind() == SqlKind.CAST) {
-        final RexCall cast = ((RexCall)right);
+        final RexCall cast = ((RexCall) right);
         if (cast.operands.size() == 1 && cast.operands.get(0).getKind() == SqlKind.LITERAL) {
           return translateBinary2(left, cast.operands.get(0));
         }
@@ -400,6 +407,58 @@ class SolrFilter extends Filter implements SolrRel {
         default:
           return null;
       }
+    }
+
+    /**
+     * A search node can be an IN or NOT IN clause or a BETWEEN
+     */
+    protected String translateSearch(RexNode condition) {
+      final String fieldName = getSolrFieldName(condition);
+
+      RexCall expanded = (RexCall) RexUtil.expandSearch(builder, null, condition);
+      final RexNode peekAt0 = !expanded.operands.isEmpty() ? expanded.operands.get(0) : null;
+      if (expanded.op.kind == SqlKind.AND) {
+        // See if NOT IN was translated into a big AND not
+        if (peekAt0 instanceof RexCall) {
+          RexCall op0 = (RexCall) peekAt0;
+          if (op0.op.kind == SqlKind.NOT_EQUALS) {
+            return "*:* -" + fieldName + ":" + toOrSetOnSameField(expanded);
+          }
+        }
+      } else if (expanded.op.kind == SqlKind.OR) {
+        if (peekAt0 instanceof RexCall) {
+          RexCall op0 = (RexCall) peekAt0;
+          if (op0.op.kind == SqlKind.EQUALS) {
+            return fieldName + ":" + toOrSetOnSameField(expanded);
+          }
+        }
+      }
+
+      if (expanded.getKind() != SqlKind.SEARCH) {
+        // passing a search back to translateMatch would lead to infinite recursion ...
+        return translateMatch(expanded);
+      }
+
+      // don't know how to handle this search!
+      throw new SolrException(SolrException.ErrorCode.SERVER_ERROR, "Unsupported search filter: " + condition);
+    }
+
+    protected String toOrSetOnSameField(RexCall search) {
+      String orClause = search.operands.stream().map(n -> {
+        RexCall next = (RexCall) n;
+        RexLiteral lit = (RexLiteral) next.getOperands().get(1);
+        return "\"" + toSolrLiteral(lit) + "\"";
+      }).collect(Collectors.joining(" OR "));
+      return "(" + orClause + ")";
+    }
+
+    protected String getSolrFieldName(RexNode node) {
+      RexCall call = (RexCall) node;
+      final RexNode left = call.getOperands().get(0);
+      if (left instanceof RexInputRef) {
+        return fieldNames.get(((RexInputRef) left).getIndex());
+      }
+      throw new SolrException(SolrException.ErrorCode.SERVER_ERROR, "Expected Solr field name for " + call.getKind() + " but found " + left);
     }
   }
 
